Java 16 Updates
1. Refactored Vector to be a record
2. Used toList instead of the collector (interesting fact: toList will
give you an immutable list while Collector does not, be careful
accordingly)
3. Some use of instanceof matching
4. Some use of Optional.stream
5. Switched some streams to use dropWhile
6. Fixed maven build (necessary because eclipse aspectj plugin currently
does not play well with Java 16 in 2021-06, seems to end up compiling as
Java 14, have had to remove the aspectj nature for now within the IDE)
7. Fixed sounds when run from jar
8. Removed some unnecessary key checks