@@ -49,24 +49,23 @@ public class PluginLibrary {
 				return null;
 			}
 			
-			Vector baseVector = mTrans.stream().map(trans -> Vector.builder().from(trans.getVelocity()))
-												.reduce(Vector.builder(), (left, right) -> left.combine(right))
-												.build(); 
+			Vector baseVector = mTrans.stream().map(trans -> new Vector(trans.getVelocity()))
+												.reduce(Vector.ZERO_VECTOR, (left, right) -> left.combine(right)); 
 			
 			
 			double speed = baseVector.getSpeed();
 			baseVector = baseVector.getUnitVector();
 			
-			List<WorldCoord> vertices = obj.getVertexList().stream().filter(GeneralPredicates.untagged()).collect(Collectors.toList());//only get untagged points (tagged points usually hidden and have special purpose)
+			List<WorldCoord> vertices = obj.getVertexList().stream().filter(GeneralPredicates.untagged()).toList();//only get untagged points (tagged points usually hidden and have special purpose)
 			for (int i = 0 ; i < density ; i++)
 			{
 				int index = new Random().nextInt(vertices.size() - 1);
 				CanvasObject fragment = Utils.getParticle(vertices.get(index), particleSize);
 				fragment.setColour(colour);
 				fragment.setProcessBackfaces(true);
-				double xVector = baseVector.getX() + (Math.random()/2) - 0.25;
-				double yVector = baseVector.getY() + (Math.random()/2) - 0.25;
-				double zVector = baseVector.getZ() + (Math.random()/2) - 0.25;
+				double xVector = baseVector.x() + (Math.random()/2) - 0.25;
+				double yVector = baseVector.y() + (Math.random()/2) - 0.25;
+				double zVector = baseVector.z() + (Math.random()/2) - 0.25;
 				Transform rot1 = new RepeatingTransform<Rotation>(Axis.Y.getRotation(Math.random() * 5), 45);
 				MovementTransform move = new MovementTransform(new Vector(xVector, yVector, zVector), speed - exhaustVelocity);
 				move.moveUntil(t -> rot1.isCompleteSpecific());
@@ -93,9 +92,9 @@ public class PluginLibrary {
     			fragment.setProcessBackfaces(true);
     			fragment.setColour(f.getColour() != null ? f.getColour() : obj.getColour());
     			Vector baseVector = fragment.getFacetList().get(0).getNormal();
-    			double xVector = baseVector.getX() + (Math.random()/2) - 0.25;
-    			double yVector = baseVector.getY() + (Math.random()/2) - 0.25;
-    			double zVector = baseVector.getZ() + (Math.random()/2) - 0.25;
+    			double xVector = baseVector.x() + (Math.random()/2) - 0.25;
+    			double yVector = baseVector.y() + (Math.random()/2) - 0.25;
+    			double zVector = baseVector.z() + (Math.random()/2) - 0.25;
     			MovementTransform move = new MovementTransform(new Vector(xVector, yVector, zVector), Math.random() * 15 + 1 );
     			fragment.addTransform(move);
     			CanvasObjectFunctions.DEFAULT.get().addTransformAboutCentre(fragment, 
@@ -180,18 +179,17 @@ public class PluginLibrary {
 				return null;
 			}
 			
-			Vector baseVector = mTrans.stream().map(trans -> Vector.builder().from(trans.getVelocity()))
-												.reduce(Vector.builder(), (left, right) -> left.combine(right))
-												.build();
+			Vector baseVector = mTrans.stream().map(trans -> new Vector(trans.getVelocity()))
+												.reduce(Vector.ZERO_VECTOR, (left, right) -> left.combine(right));
 			
-			for (ICanvasObject impactee : objects.get()){
+			for (ICanvasObject impactee : objects.get()) {
 				if (impactee.equals(obj)) continue;
 				//Tries to factor in possibility object was drawn completely on the other side of an object (after moving) and thus not detected as a collision by point inside check
 				for(Point p : obj.getVertexList()){
 					Point prevPoint = new Point(p);
-					prevPoint.x -= baseVector.getX();
-					prevPoint.y -= baseVector.getY();
-					prevPoint.z -= baseVector.getZ();
+					prevPoint.x -= baseVector.x();
+					prevPoint.y -= baseVector.y();
+					prevPoint.z -= baseVector.z();
 				
 					for(Facet f : impactee.getFacetList())
 					{
@@ -273,14 +271,14 @@ public class PluginLibrary {
 			double curDist = -1;
 			
 			for(WorldCoord impactPoint : impactPoints) {
-				Point prevPoint = new Point(impactPoint.x - velocity.getX(), impactPoint.y - velocity.getY(), impactPoint.z - velocity.getZ());
+				Point prevPoint = new Point(impactPoint.x - velocity.x(), impactPoint.y - velocity.y(), impactPoint.z - velocity.z());
 
-				for(Facet f : impactee.getFacetList().stream().filter(f -> f.getDistanceFromFacetPlane(impactPoint) < move.getSpeed() + 1).collect(Collectors.toList()))
+				for(Facet f : impactee.getFacetList().stream().filter(f -> f.getDistanceFromFacetPlane(impactPoint) < move.getSpeed() + 1).toList())
 				{
 					Point intersect = f.getIntersectionPointWithFacetPlane(prevPoint, move.getVector());
 	
 					//if intersected with plane of facet check we are within the bounds of the facet
-					if (intersect != null && (prevPoint.distanceTo(intersect) < curDist || curDist == -1 ) && f.isPointWithin(intersect)){
+					if (intersect != null && (prevPoint.distanceTo(intersect) < curDist || curDist == -1 ) && f.isPointWithin(intersect)) {
 						curFacet = Optional.of(f);
 						curDist = prevPoint.distanceTo(intersect);
 					}
@@ -293,7 +291,7 @@ public class PluginLibrary {
 	}
 	
 	
-	public static IPlugin<IPlugable, Void> track(final ICanvasObject objectToTrack, final double rotationRate){
+	public static IPlugin<IPlugable, Void> track(final ICanvasObject objectToTrack, final double rotationRate) {
 		return plugable -> {
 		    Optional.ofNullable(plugable.getParent()).ifPresent(obj -> 
 		        obj.getTransformsOfType(MovementTransform.class).stream()
